# Delocalizer

./: .gitignore  README.md  delocalizer.py  env.example  honorifics.py  main.py  merger.py  modify_subs.pxd  modify_subs.pyx  modifysubs.cpp  one_piece.json  op_subsplease.json  pyass.py  pyproject.toml  requirements.txt  setup.py  test.py  utils.py
.github/workflows/: build_wheels.yml  python-app.yml
cyfiles/: modify_subs.cpp  modifysubs.cpp
delocalizer/: delocalizer.py
lib/libass/lib/: libass.la  libass.so.9.2.1
lib/libass/lib/pkgconfig/: libass.pc
