[tool.poetry]
name = "delocalizer"
version = "0.1.0"
description = ""
authors = ["Efrain <efrondx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.32.3"
pysubs2 = "^1.7.3"
python-dotenv = "^1.0.1"
subdeloc-tools = "^0.5.0"

[tool.poetry.scripts]
delocalizer = "delocalizer.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"