[tool.poetry]
name = "delocalizer"
version = "0.4.3"
description = ""
authors = ["Efrain <efrondx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
pysubs2 = "^1.7.3"
python-dotenv = "^1.0.1"
subdeloc-tools = "^0.9.8"
modify-subs = "^0.5.0"

[tool.poetry.scripts]
delocalizer = "delocalizer.main:main"
extractor = "delocalizer.extractor:main"
honorifics = "delocalizer.honorific:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"